cli/tests/testdata/run/error_001.ts.out
[WILDCARD]error: Uncaught Error: bad
  throw Error("bad");
        ^
    at foo ([WILDCARD]/error_001.ts:2:9)
    at bar ([WILDCARD]/error_001.ts:6:3)
    at [WILDCARD]/error_001.ts:9:1
